# 20191_ED

arquivo/buscaBinaria/: CamilaCamilo-DanielLessa.rar  esqueleto.c  main
arquivo/buscaBinaria/camila/: esqueleto.c
arquivo/merge/: CamilaCamilo-DanielLessa.rar  main  main.c  resultado.txt
arquivo/selectionSort/: CamilaCamilo-DanielLessa.rar  esqueleto.c  main
arvoreB+/__MACOSX/: ._arvore-b-mais-disco
arvoreB+/__MACOSX/arvore-b-mais-disco/: ._.idea  ._CMakeLists.txt  ._Makefile  ._arvore_b_mais.c  ._arvore_b_mais.h  ._build  ._cliente.c  ._cliente.h  ._cmake-build-debug  ._lista_clientes.c  ._lista_clientes.h  ._lista_nos_folhas.c  ._lista_nos_folhas.h  ._lista_nos_internos.c  ._lista_nos_internos.h  ._metadados.c  ._metadados.h  ._no_folha.c  (+5 more)
arvoreB+/arvore-b-mais-disco/: test_arvore_b_mais.c
arvoreBinaria/maiorElemento/: arvore-binaria-busca.c  arvore-binaria.h
arvoreBinariaDeBusca/: CamilaCamilo-DanielLessa.c  main
geracaoParticoes/: CMakeLists.txt  cliente.c  cliente.h  geracao_particoes.h  test_geracao_particoes.c
geracaoParticoes/__MACOSX/: ._CMakeLists.txt  ._Makefile  ._cliente.c  ._cliente.h  ._geracao_particoes.c  ._geracao_particoes.h  ._lista_clientes.c  ._lista_clientes.h  ._nomes.c  ._nomes.h  ._test_geracao_particoes.c  ._ufftest.h
grafos/instagram/: CamilaCamilo-DanielLessa.rar  grafo.c  grafo.h  main
labArvore/: CMakeLists.txt  arvore-binaria.c  arvore-binaria.h  filas-listas.c  filas-listas.h  lista-encadeada.c  main  main.c  makefile
revisaoP1/: arvore-binaria.c  arvore-binaria.h  grafo.c  grafo.h  main  main.c  makefile
